--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/motion": "^2.0.0-beta.12",
+    "pinia": "^2.0.16",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
